# allways

./: compose.yaml  db.sqlite3  pyproject.toml
apps/main/: admin.py  models.py  urls.py  validators.py  views.py
apps/main/migrations/: 0001_initial.py  0002_statistics.py  0003_alter_places_options_alter_statistics_options_and_more.py
config/: settings.py  urls.py
deployment/docker/: Dockerfile
locale/en/LC_MESSAGES/: django.po
locale/ro/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.po
our_app/: db.sqlite3
our_app/main/: admin.py  models.py  views.py
our_app/main/migrations/: 0001_initial.py
our_app/our_app/: asgi.py  settings.py  urls.py  wsgi.py
our_app/static/main/css/: maps.css  style.css
our_app/templates/: main.html  maps.html
static/main/css/: header.css  maps.css  statistics.css  style.css
static/main/js/: main.js
templates/: base.html  main.html  maps.html  statics.html  statistics.html
